--- a/gb/20/9/24/n12428481.md
+++ b/gb/20/9/24/n12428481.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aszqnd3962/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/aszqnd3962/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/aszqnd3962/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/aszqnd3962/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/aszqnd3962/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/aszqnd3962/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/aszqnd3962/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/aszqnd3962/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一通越洋电话 湖南社区干部退党</h2>
-<a href="https://git.io/JUa0w"><img width="600" src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/aszqnd3962/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://d2s9nucg9xc8yr.cloudfront.net/A2jhNM8Hl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>图为2014年香港法轮功学员举办的游行活动。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年09月25日讯】（大纪元记者王奕然采访报导）美国佛州。2020年7月25日清晨6点半钟，<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>李城芳像往常一样准时坐在电脑前，向大陆拨打电话。她拨打的是劝中国人退出共产党组织的真相电话。从早上6点半到9点半，3个小时内，10位中共党员<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>，1位团员退团。</p>
-<p>李城芳介绍，其中一位<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>的是湖南某市社区干部。两人主要通话过程如下：</p>
+	<p>【大纪元2020年09月25日讯】（大纪元记者王奕然采访报导）美国佛州。2020年7月25日清晨6点半钟，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>李城芳像往常一样准时坐在电脑前，向大陆拨打电话。她拨打的是劝中国人退出共产党组织的真相电话。从早上6点半到9点半，3个小时内，10位中共党员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>，1位团员退团。</p>
+<p>李城芳介绍，其中一位<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%80%80%E5%85%9A.md#1">退党</a>的是湖南某市社区干部。两人主要通话过程如下：</p>
 <p>对方：“全球都在报导死人，我们这里没有疫情，控制得很好啊。”</p>
 <p>李成芳：“全球死了五六十万人（编注：截至9月24日，全球中共病毒（武汉肺炎）染疫死亡人数超过93万），其实是不包括中国人的。中国、朝鲜，还有伊朗，这三个国家的数据，别人是不敢相信的呀。极权国家的东西，全部都是造假的呀。”</p>
 <p>“你看武汉报导死了两千多人，后来报导， 又加了一千多人，这是官方数字， 你再去看一下武汉殡仪馆。7个殡仪馆，在4月清明节之前，一个殡仪馆一天发500个骨灰盒，领12天，你算一下多少？4万多出来了。”</p>
@@ -20,7 +20,7 @@
 <p>“怎么躲灾躲祸啊 ？你看中共宣扬无神论，迫害修炼‘真善忍’的好人。”</p>
 <p>“回顾一下我们的历史，哪朝哪代，迫害佛法的那个皇帝，都是死得很惨的呀。”</p>
 <p>“不相信神佛存在，它道德就败坏，没有约束嘛。”</p>
-<p>李城芳也常常结合自己的亲身经历来讲。2012年夏天，刚来美国不久的她遭遇一场车祸，脊椎受损，并出现脑震荡等多种症状，车祸后近四年时间里，她几乎睡不着觉，很困也睡不着，极度痛苦，医院治疗也没有任何效果；2015年，她开始修炼<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，没想到，短短两周内，所有的病痛一扫而空，像换了个人一样。“身心健康，真是身心健康。”</p>
+<p>李城芳也常常结合自己的亲身经历来讲。2012年夏天，刚来美国不久的她遭遇一场车祸，脊椎受损，并出现脑震荡等多种症状，车祸后近四年时间里，她几乎睡不着觉，很困也睡不着，极度痛苦，医院治疗也没有任何效果；2015年，她开始修炼<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，没想到，短短两周内，所有的病痛一扫而空，像换了个人一样。“身心健康，真是身心健康。”</p>
 <p>法轮功是以“真、善、忍”为原则的修炼功法，包括五套简单易学的功法动作，祛病健身效果神奇。</p>
 <p>法轮功洪传世界100多个国家和地区，但唯独在中国遭到迫害。李城芳告诉湖南这位社区干部，“你看这20年来，中共迫害法轮功，迫害修炼‘真善忍’的人，成千上万人被迫害致死，天理难容啊。”</p>
 <p>“人不治，就天治嘛。”</p>
@@ -50,7 +50,7 @@
 <p>根据医学常识，大面积烧伤病人，伤口需曝露处理，而非包裹处理；并且，为防止细菌感染而危及生命，严重烧伤病人要住隔离病房，探视者需穿戴隔离衣帽、手套、鞋套。而中央电视台官方记者穿便服，不穿隔离衣、不戴口罩，近距离采访刘思影，令人匪夷所思。</p>
 <p>&nbsp;</p>
 <div style="width: 640px;" class="wp-video"><!--[if lt IE 9]><a>document.createElement('video');</a><![endif]-->
-<video class="wp-video-shortcode" id="video-12428481-1" width="640" b="360" preload="metadata" controls="controls"><source type="video/mp4" src="https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4?_=1" /><ahref="https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4">https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4</a></video><a href="https://git.io/JUa0w"><img width="600" src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/aszqnd3962/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr></div>
+<video class="wp-video-shortcode" id="video-12428481-1" width="640" b="360" preload="metadata" controls="controls"><source type="video/mp4" src="https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4?_=1" /><ahref="https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4">https://inews3.ntdtv.com/data/media/2012/12-9/F_RV0000061_A_F_RV_Other-1_WeiHuoZhongWenBan_P609220.mp4</a></video><a href="https://d2s9nucg9xc8yr.cloudfront.net/A2jhNM8Hl"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr></div>
 <p>李城芳说，“跟你讲这些，不是让你来帮助法轮功，是让你认清真假善恶，选择善良，得善报，得美好。”</p>
 <p>对方说：谢谢你哦。最后同意退党。</p>
 <p>李城芳表示，每天拨打退党真相电话的情况可能会有不同。比如有的人三五分钟就退了，但有的人就要讲很长时间，比如，9月21日的一通电话，她在电话中就讲了38分钟才说服一位团员退团；也有的人是静静地听真相，最后再退；或者有的人已经明白真相了，一说就退，“感觉对方就在等着你一样”。</p>
@@ -67,9 +67,9 @@
 <p>“幽灵是什么呀？ 幽灵是鬼魂呀。你说，你把生命献给鬼魂的时候，你会有好结果吗？”</p>
 <p>“你是不是得把这个誓言作废掉？”</p>
 <p>李城芳说，这么一说，很多人都能明白。</p>
-<h2>大纪元发表《<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》 和郑重声明</h2>
-<p>2004年，大纪元发表《<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》系列社论，全面深刻揭露了共产党的邪恶氓本质，指出共产党是邪教、是反宇宙的力量，它的根本目的是毁灭人类，从而引发掀起全球中国人退出中共党团队的大潮。</p>
-<p>至2020年9月24日，超过3.64亿人在大纪元退党网站上，声明退出中共党、团、队（简称“<ahref="https://github.com/aszqnd3962/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”）。</p>
+<h2>大纪元发表《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》 和郑重声明</h2>
+<p>2004年，大纪元发表《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%9D%E8%AF%84.md#1">九评</a>共产党》系列社论，全面深刻揭露了共产党的邪恶氓本质，指出共产党是邪教、是反宇宙的力量，它的根本目的是毁灭人类，从而引发掀起全球中国人退出中共党团队的大潮。</p>
+<p>至2020年9月24日，超过3.64亿人在大纪元退党网站上，声明退出中共党、团、队（简称“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E9%80%80.md#1">三退</a>”）。</p>
 <p>早在2005年1月12日，大纪元发表郑重声明如下：</p>
 <p>广大的中国民众：共产党的末日就要到了。但是这个邪恶的党（魔教）在历史上却对众生、对神佛犯下了滔天大罪，神一定要清算这个恶魔。</p>
 <p>如果有一天，神指使人类的谁对共产党清算时，也一定不会放过那些所谓坚定的邪恶党徒。我们郑重声明：所有参加过共产党与共产党其它组织的 (被邪恶打上兽的印记的)人，赶快退出，抹去邪恶的印记。一旦谁对这个魔教清算时，大纪元储存的记录可以为声明退出共产党和共产党其它组织的人作证。</p>
@@ -80,42 +80,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12428085.md#1">武汉政府隐瞒疫情 第五名受害者家属起诉</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12426953.md#1">访民领取政府补助 长沙当局反控涉嫌敲诈</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12427021.md#1">巴黎各地法轮功信息日 助人了解中共邪恶本质</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/18/n12414284.md#1">多少大陆医院涉嫌活摘人体器官（1）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615245.md#1">遭指涉违国安法 国际人权专家夏博义离港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614870.md#1">【图解】铁链女穿破盛世浮华</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13611204.md#1">河北优秀新闻工作者陈星伯陷冤狱 几近失明</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613579.md#1">人权律师群关注“铁链女”案 要求彻查真相</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/30/n11622063.md#1" target="_blank">林辉：中共对赵州桥的破坏令人叹惋</a></li><li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977516.md#1" target="_blank">生性胆小女博士 遇世纪邪恶却勇敢说不</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/7/4/n9355207.md#1" target="_blank">一位美国微软工程师修炼法轮功的故事</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/20/n12416763.md#1">译成34种语言 一部童话触动世界人的心灵</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/18/n12412674.md#1">上善若水，水善利万物而不争</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12426398.md#1">【重播】FBI及反恐中心作证：美国面临威胁</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12424655.md#1">【纽约调查】护理中心拉客 女老板被起诉</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12428304.md#1">【珍言真语】杨健兴：港警改例 扼杀网媒阻真相</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12424906.md#1">任志强被重判 震撼红二代及政商界圈</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12423439.md#1">川普习近平联大演讲针锋相对 白宫回应</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12424290.md#1">中共空军视频模拟炸关岛 川普公开回应</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/22/n12422727.md#1">陆综《歌手》宣布收摊 张学友曾四度拒绝邀约</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/22/n12422856.md#1">巨石强森着急去片场 徒手拆下家中大铁门</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/22/n12423047.md#1">自夸40岁3分球9投9中?邓超被工作室纠正年龄</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12425190.md#1">二胎儿子小名首曝光 章子怡育儿经引共鸣</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12428559.md#1">周润发行山邂逅网友 听到公益计划立马掏腰包</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/19/n12416135.md#1">白米粥是“世间第一补物” 中医师教你最补吃法</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12423944.md#1">女子濒死在隧道中高速飞行 还与耶稣对话</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/23/n12424176.md#1">CNN赞台湾引领全球抗疫 点出成功关键</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12426291.md#1">力阻灭绝 全球最大植物保种中心在台湾</a></li>
-<li><a href="https://github.com/aszqnd3962/djy/blob/master/gb/20/9/22/n12421823.md#1">游客乱丢垃圾 泰国国家公园整箱寄回给他们</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/aszqnd3962/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/aszqnd3962/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/24/n12428481.htm">一通越洋电话 湖南社区干部退党</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/24/n12428481.htm">一通越洋电话 湖南社区干部退党</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/aszqnd3962/djy/blob/master/gb/20/9/24/n12428481.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/aszqnd3962/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/aszqnd3962/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aszqnd3962/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aszqnd3962/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/aszqnd3962/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/24/n12428481.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
